tests/badly_positioned_react/badly_positioned_react.exp
Error ---------------------------------------------------------------------------------------------------- test.js:21:21

Cannot call `create` with `create1<...>(...)` bound to `Component` because in type argument `P` [1]: inexact object
type [2] is incompatible with exact object type [3]. [incompatible-exact]

   test.js:21:21
    21| const Foo1 = create(create1<{||}>(Foo));
                            ^^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:255:38
   255|   declare export type ComponentType<-P: {...}> = component(...P);
                                             ^ [1]
   test.js:4:34
     4|   Component: React.ComponentType<{...P, ...{}}>,
                                         ^^^^^^^^^^^^^ [2]
   test.js:21:29
    21| const Foo1 = create(create1<{||}>(Foo));
                                    ^^^^ [3]



Found 1 error
